fixed alignment issues on form label

--- a/src/styles/components/SearchFormLarge.scss
+++ b/src/styles/components/SearchFormLarge.scss
@@ -26,7 +26,7 @@
 
   .dropdown{
     margin-right: 1rem;
-    border-width: 0.5px;
+    // border-width: 0.5px;
     border-color: $color-primary;
     border-radius: $radius-input;
 
