--- a/src/styles/components/googlePlaces.scss
+++ b/src/styles/components/googlePlaces.scss
@@ -10,12 +10,11 @@
     font-size: 14px;
   }
   input{
-    margin-top: 10px;
     background-color: $color-light-grey;
     height: 50px;
     border-radius: $radius-card;
     padding: 20px 10px;
-    border: 0.5px solid $color-grey;
+    // border: 0.5px solid $color-grey;
     font-size: 14px;
 
     &::placeholder {
