--- a/src/styles/summary.scss
+++ b/src/styles/summary.scss
@@ -130,7 +130,7 @@
             width: 100%;
             height: 50px;
             background-color:  $color-light-grey;
-            border: 0.5px solid $color-grey;
+            // border: 0.5px solid $color-grey;
         }
 
         .errored{
